# TautEnum

./: .gitignore  LICENSE  README
src/: CMakeLists.txt  DACOEMolAtomIndex.H  DACOEMolBondIndex.H  MolDiffViewer.H  MolDiffViewer.cc  MolDiffViewer2.H  MolDiffViewer2.cc  QTMolDisplay2D.H  QTMolDisplay2D.cc  TautEnum.H  TautEnum.cc  TautEnumCallableBase.H  TautEnumCallableBase.cc  TautEnumCallableSerial.H  TautEnumCallableThreaded.H  TautEnumSettings.H  TautEnumSettings.cc  TautStand.H  TautStand.cc  apply_daylight_arom_model_to_oemol.cc  boost_tuples_and_bind.H  canned_tautenum_routines.cc  check_oechem_licence.cc  chrono.h  create_cansmi.cc  create_oesubsearch.cc  draw_oemol_to_qimage.cc  extract_smarts_from_smirks.cc  mol_diff_viewer.cc  mol_diff_viewer2.cc  radical_atoms.cc  smirks_helper_fns.cc  split_smiles_into_atom_bits.cc  stddefs.H  taut_enum.cc  taut_enum_default_enum_smirks_extended.H  taut_enum_default_enum_smirks_orig.H  taut_enum_default_standardise_smirks.H  taut_enum_default_vector_bindings.H  taut_enum_protonate_a.H  (+2 more)
src/build_utils/CMakeModules/: FindCairo.cmake
test_dir/: chembl_20_first_10000.smi  chembl_20_first_10000_orig.smi  chembl_20_first_10000_std.smi  run_taut_enum.sh  triazoles.smi
